# kindleNews

./: .gitignore  README.md  applicationRequirements.md  audit_feeds.py  pyproject.toml  requirements.txt  validate_post_cleanup.py
.github/workflows/: ci.yml  daily-feed-cache.yml  weekly-digest.yml
config/: config.yaml  editor_persona.md  feeds.txt  reader_topics.yaml  state.json
config/prompts/: ranking_prompt.txt  summary_prompt.txt
docs/: daily-feed-cache-design.md
output/: 2026-04-17.epub  2026-04-20.epub  2026-04-27.epub  2026-05-04.epub  2026-05-11.epub  2026-05-18.epub  2026-05-25.epub  2026-06-01.epub  2026-06-08.epub  2026-06-15.epub  2026-06-22.epub  2026-06-29.epub  2026-07-06.epub  2026-07-13.epub  2026-07-20.epub
output/cache/: daily-2026-04-17.json  daily-2026-04-18.json  daily-2026-04-19.json  daily-2026-04-21.json  daily-2026-04-22.json  daily-2026-04-23.json  daily-2026-04-24.json  daily-2026-04-25.json  daily-2026-04-26.json  daily-2026-04-28.json  daily-2026-04-29.json  daily-2026-04-30.json  daily-2026-05-01.json  daily-2026-05-02.json  daily-2026-05-03.json  daily-2026-05-05.json  daily-2026-05-06.json  daily-2026-05-07.json  daily-2026-05-08.json  daily-2026-05-09.json  daily-2026-05-10.json  daily-2026-05-12.json  daily-2026-05-13.json  daily-2026-05-14.json  (+61 more)
tests/: test_ai.py  test_cache_store.py  test_config_loader.py  test_cost.py  test_emailer.py  test_epub_writer.py  test_feeds.py  test_feeds_ingestion.py  test_fetch_article.py  test_pipeline_budgeting.py  test_pipeline_failures.py  test_pipeline_run.py  test_state.py
(+18 files in other folders)
